# robi_backend

./: .env.example  Dockerfile  config.py  db.py  dependencies.py  docker-compose.yml  main.py  plan-robiBackend.prompt.md  pyproject.toml
architecture/: robot_architecture.md
middleware/: auth.py  error_handler.py  logging.py
models/: entities.py  requests.py  responses.py  ws_messages.py
nginx/: nginx.conf.template
repositories/: media.py  memory.py  people.py  users.py
routers/: health.py  restore.py
scripts/: generate_certs.sh
services/: agent.py
tests/: conftest.py
tests/integration/: test_ws_flow.py
tests/streamlit_simulator/: app.py
tests/unit/: test_middleware.py  test_models.py  test_repositories.py  test_routers.py  test_services.py  test_websocket.py
ws_handlers/: protocol.py  streaming.py
